feat: komandoak garatu eta zuzendu